tests/snapshots/lab_explorer_golden__scenario_discovery_output_v2_scrubbed.snap
---
source: tests/lab_explorer_golden.rs
expression: golden
---
[
  {
    "name": "single_task_seed_sweep",
    "mode": "schedule",
    "metadata": {
      "config": {
        "base_seed": "seed-0",
        "max_runs": 3,
        "max_steps_per_run": 100000,
        "worker_count": 2,
        "record_traces": true
      },
      "workload": {
        "root_tasks_scheduled": 1,
        "scheduled_priorities": [
          0
        ],
        "shape": "single immediate root task",
        "notes": [
          "returns usize",
          "baseline seed sweep"
        ]
      },
      "summary": {
        "has_violations": false,
        "certificates_consistent": false,
        "certificate_divergence_count": 2,
        "unexplored_seed_count": 0,
        "repeated_class_runs": 2,
        "dominant_class_runs": 3,
        "total_steps": 3,
        "min_steps": 1,
        "max_steps": 1
      }
    },
    "report": {
      "total_runs": 3,
      "unique_classes": 1,
      "violation_seeds": [],
      "coverage": {
        "equivalence_classes": 1,
        "total_runs": 3,
        "new_class_discoveries": 1,
        "class_run_counts": [
          [
            "fp-0",
            3
          ]
        ],
        "novelty_histogram": {
          "0": 2,
          "1": 1
        },
        "saturation_window": 10,
        "saturation_flag": false,
        "existing_class_hits": 2,
        "runs_since_last_new_class": 2
      },
      "top_unexplored": [],
      "runs": [
        {
          "seed": "seed-0",
          "steps": 1,
          "fingerprint": "fp-0",
          "is_new_class": true,
          "violation_count": 0,
          "certificate_hash": "cert-0"
        },
        {
          "seed": "seed-1",
          "steps": 1,
          "fingerprint": "fp-0",
          "is_new_class": false,
          "violation_count": 0,
          "certificate_hash": "cert-1"
        },
        {
          "seed": "seed-2",
          "steps": 1,
          "fingerprint": "fp-0",
          "is_new_class": false,
          "violation_count": 0,
          "certificate_hash": "cert-1"
        }
      ],
      "certificate_divergences": [
        [
          "seed-0",
          "seed-1"
        ],
        [
          "seed-0",
          "seed-2"
        ]
      ]
    },
    "dpor_coverage": null
  },
  {
    "name": "two_task_dpor",
    "mode": "dpor",
    "metadata": {
      "config": {
        "base_seed": "seed-0",
        "max_runs": 4,
        "max_steps_per_run": 100000,
        "worker_count": 2,
        "record_traces": true
      },
      "workload": {
        "root_tasks_scheduled": 2,
        "scheduled_priorities": [
          0,
          0
        ],
        "shape": "two independent root tasks",
        "notes": [
          "backtrack derivation active",
          "sleep-set pruning exposed"
        ]
      },
      "summary": {
        "has_violations": false,
        "certificates_consistent": false,
        "certificate_divergence_count": 3,
        "unexplored_seed_count": 3,
        "repeated_class_runs": 3,
        "dominant_class_runs": 4,
        "total_steps": 8,
        "min_steps": 2,
        "max_steps": 2
      }
    },
    "report": {
      "total_runs": 4,
      "unique_classes": 1,
      "violation_seeds": [],
      "coverage": {
        "equivalence_classes": 1,
        "total_runs": 4,
        "new_class_discoveries": 1,
        "class_run_counts": [
          [
            "fp-0",
            4
          ]
        ],
        "novelty_histogram": {
          "0": 3,
          "1": 1
        },
        "saturation_window": 10,
        "saturation_flag": false,
        "existing_class_hits": 3,
        "runs_since_last_new_class": 3
      },
      "top_unexplored": [
        {
          "seed": "seed-4",
          "score_novelty": null,
          "score_persistence_sum": null,
          "score_fingerprint": null
        },
        {
          "seed": "seed-5",
          "score_novelty": null,
          "score_persistence_sum": null,
          "score_fingerprint": null
        },
        {
          "seed": "seed-6",
          "score_novelty": null,
          "score_persistence_sum": null,
          "score_fingerprint": null
        }
      ],
      "runs": [
        {
          "seed": "seed-0",
          "steps": 2,
          "fingerprint": "fp-0",
          "is_new_class": true,
          "violation_count": 0,
          "certificate_hash": "cert-0"
        },
        {
          "seed": "seed-1",
          "steps": 2,
          "fingerprint": "fp-0",
          "is_new_class": false,
          "violation_count": 0,
          "certificate_hash": "cert-1"
        },
        {
          "seed": "seed-2",
          "steps": 2,
          "fingerprint": "fp-0",
          "is_new_class": false,
          "violation_count": 0,
          "certificate_hash": "cert-2"
        },
        {
          "seed": "seed-3",
          "steps": 2,
          "fingerprint": "fp-0",
          "is_new_class": false,
          "violation_count": 0,
          "certificate_hash": "cert-2"
        }
      ],
      "certificate_divergences": [
        [
          "seed-0",
          "seed-1"
        ],
        [
          "seed-0",
          "seed-2"
        ],
        [
          "seed-0",
          "seed-3"
        ]
      ]
    },
    "dpor_coverage": {
      "total_races": 16,
      "total_hb_races": 0,
      "total_backtrack_points": 16,
      "pruned_backtrack_points": 0,
      "sleep_pruned": 10,
      "efficiency": 0.25,
      "estimated_class_trend": [
        2,
        2,
        2,
        2
      ]
    }
  },
  {
    "name": "three_task_topology_frontier",
    "mode": "topology",
    "metadata": {
      "config": {
        "base_seed": "seed-0",
        "max_runs": 3,
        "max_steps_per_run": 100000,
        "worker_count": 2,
        "record_traces": true
      },
      "workload": {
        "root_tasks_scheduled": 3,
        "scheduled_priorities": [
          0,
          0,
          0
        ],
        "shape": "three-task topology frontier",
        "notes": [
          "topology-prioritized seed frontier",
          "homology score on unexplored seeds"
        ]
      },
      "summary": {
        "has_violations": false,
        "certificates_consistent": false,
        "certificate_divergence_count": 2,
        "unexplored_seed_count": 3,
        "repeated_class_runs": 2,
        "dominant_class_runs": 3,
        "total_steps": 9,
        "min_steps": 3,
        "max_steps": 3
      }
    },
    "report": {
      "total_runs": 3,
      "unique_classes": 1,
      "violation_seeds": [],
      "coverage": {
        "equivalence_classes": 1,
        "total_runs": 3,
        "new_class_discoveries": 1,
        "class_run_counts": [
          [
            "fp-0",
            3
          ]
        ],
        "novelty_histogram": {
          "0": 2,
          "3": 1
        },
        "saturation_window": 10,
        "saturation_flag": false,
        "existing_class_hits": 2,
        "runs_since_last_new_class": 2
      },
      "top_unexplored": [
        {
          "seed": "seed-4",
          "score_novelty": 3,
          "score_persistence_sum": 0,
          "score_fingerprint": "fp-1"
        },
        {
          "seed": "seed-5",
          "score_novelty": 0,
          "score_persistence_sum": 0,
          "score_fingerprint": "fp-2"
        },
        {
          "seed": "seed-0",
          "score_novelty": 0,
          "score_persistence_sum": 0,
          "score_fingerprint": "fp-3"
        }
      ],
      "runs": [
        {
          "seed": "seed-1",
          "steps": 3,
          "fingerprint": "fp-0",
          "is_new_class": true,
          "violation_count": 0,
          "certificate_hash": "cert-0"
        },
        {
          "seed": "seed-2",
          "steps": 3,
          "fingerprint": "fp-0",
          "is_new_class": false,
          "violation_count": 0,
          "certificate_hash": "cert-1"
        },
        {
          "seed": "seed-3",
          "steps": 3,
          "fingerprint": "fp-0",
          "is_new_class": false,
          "violation_count": 0,
          "certificate_hash": "cert-2"
        }
      ],
      "certificate_divergences": [
        [
          "seed-1",
          "seed-2"
        ],
        [
          "seed-1",
          "seed-3"
        ]
      ]
    },
    "dpor_coverage": null
  }
]
